--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -51,11 +51,15 @@
 	}
 	.top-articles {
 		display: inline-block;
-		padding-bottom: 50px;
+		@media (min-width: 768px){
+			padding-bottom: 50px;
+		}
 		.about-us {
-			@include span(5,false);
 			padding: 30px 0;
 			background-color: $light-greywhite-two;
+			@media (min-width: 768px){
+				@include span(5,false);
+			}
 			.title-about-us {
 				margin-bottom: 10px;
 				padding:0 30px;
@@ -77,13 +81,32 @@
 		display: inline-block;
 		margin-top: 30px;
 		margin-bottom: 60px;
+		@media (min-width: 768px){
+			max-width: 100%;
+		}
+		@media (min-width: 1200px){
+			width: 100%;
+			max-width: none;
+		}
 		.wrap-more-article {
-			@include span(8,false);
 			text-align: center;
+			display: none;
+			@media (min-width: 768px){
+				display: block;
+				margin-bottom:20px;
+			}
+			@media (min-width: 922px){
+				@include span(6,false);
+			}
+			@media (min-width: 1200px){
+				@include span(8,false);
+			}
 		}
 		.wrap-more-comment {
-			@include span(4,false);
 			text-align: center;
+			@media (min-width: 922px){
+				@include span(4,false);
+			}
 		}
 	}
 }
