--- a/public/asset/css/main.css
+++ b/public/asset/css/main.css
@@ -174,13 +174,13 @@ button {
     padding: 0 30px;
     margin-bottom: 10px;
     margin-top: 144px; }
-    @media (min-width: 768px) {
+    @media (min-width: 1080px) {
       .last-new-article .last-new-title {
         margin-top: 0;
         margin-bottom: 30px; } }
   .last-new-article .last-new-wrap {
     width: 100%; }
-    @media (min-width: 768px) {
+    @media (min-width: 1080px) {
       .last-new-article .last-new-wrap {
         display: -webkit-box;
         display: -webkit-flex;
@@ -205,7 +205,7 @@ button {
         border-color: transparent transparent #ffffff transparent;
         bottom: 0;
         left: 25px; }
-      @media (min-width: 768px) {
+      @media (min-width: 1080px) {
         .last-new-article .last-new-wrap .last-new-img {
           width: 31.28255%;
           vertical-align: top;
@@ -216,7 +216,7 @@ button {
             content: none; } }
     .last-new-article .last-new-wrap .last-new-content {
       padding-top: 8px; }
-      @media (min-width: 768px) {
+      @media (min-width: 1080px) {
         .last-new-article .last-new-wrap .last-new-content {
           width: 64.61589%;
           vertical-align: top;
@@ -525,7 +525,14 @@ button {
       padding: 0 20px; }
       @media (min-width: 768px) {
         .navigation .container-navigation .container-logo {
-          height: 150px; } }
+          height: 150px;
+          max-width: 140px; } }
+      @media (min-width: 1080px) {
+        .navigation .container-navigation .container-logo {
+          max-width: 205px; } }
+      @media (min-width: 1280px) {
+        .navigation .container-navigation .container-logo {
+          max-width: 250px; } }
       .navigation .container-navigation .container-logo .archi-wiki-logo {
         max-width: 112px;
         width: 100%;
@@ -533,7 +540,10 @@ button {
         @media (min-width: 768px) {
           .navigation .container-navigation .container-logo .archi-wiki-logo {
             max-width: 198.9px;
-            padding-top: 32px; } }
+            padding-top: 44px; } }
+  @media (min-width: 768px) and (min-width: 1080px) {
+    .navigation .container-navigation .container-logo .archi-wiki-logo {
+      padding-top: 32px; } }
         @media (min-width: 768px) {
           .navigation .container-navigation .container-logo .archi-wiki-logo.logo-mobile {
             display: none; } }
@@ -543,7 +553,7 @@ button {
       .navigation .container-navigation .container-logo .legend-logo {
         font-size: 12px;
         color: rgba(70, 87, 99, 0.85); }
-        @media (max-width: 767px) {
+        @media (max-width: 1079px) {
           .navigation .container-navigation .container-logo .legend-logo {
             display: none; } }
     .navigation .container-navigation .container-header-nav {
@@ -555,22 +565,31 @@ button {
       @media (max-width: 767px) {
         .navigation .container-navigation .container-header-nav {
           display: none; } }
+      @media (min-width: 875px) {
+        .navigation .container-navigation .container-header-nav {
+          width: 63%; } }
       .navigation .container-navigation .container-header-nav .header-nav {
         margin: auto; }
         .navigation .container-navigation .container-header-nav .header-nav .item {
           display: inline-block;
-          padding: 0 15px; }
+          padding: 0 5px; }
+          @media (min-width: 1080px) {
+            .navigation .container-navigation .container-header-nav .header-nav .item {
+              padding: 0 15px; } }
           .navigation .container-navigation .container-header-nav .header-nav .item a {
             color: #34414a;
             text-transform: uppercase;
-            font-size: 18px; }
+            font-size: 16px; }
+            @media (min-width: 1080px) {
+              .navigation .container-navigation .container-header-nav .header-nav .item a {
+                font-size: 18px; } }
     .navigation .container-navigation .search-nav {
       width: 8.33333%;
       float: left;
       width: 133px;
       height: 150px;
       display: flex; }
-      @media (max-width: 1023px) {
+      @media (max-width: 1279px) {
         .navigation .container-navigation .search-nav {
           display: none; } }
       .navigation .container-navigation .search-nav .fa-search {
@@ -864,22 +883,45 @@ button {
   #page-container #intro {
     background-color: white; }
     @media (min-width: 768px) {
-      #page-container #intro .backgroung-img-intro {
-        width: 56.28255%;
-        vertical-align: top;
-        display: inline-block;
-        display: -webkit-inline-box;
-        display: -webkit-inline-flex;
-        display: -moz-inline-flex;
-        display: -ms-inline-flexbox;
-        display: inline-flex; } }
-    #page-container #intro .backgroung-img-intro img {
-      width: 100%; }
+      #page-container #intro {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex; } }
+    #page-container #intro .backgroung-img-intro {
+      position: relative; }
+      @media (min-width: 768px) {
+        #page-container #intro .backgroung-img-intro {
+          width: 56.28255%;
+          vertical-align: top;
+          display: inline-block;
+          display: -webkit-inline-box;
+          display: -webkit-inline-flex;
+          display: -moz-inline-flex;
+          display: -ms-inline-flexbox;
+          display: inline-flex;
+          overflow: hidden; } }
+      #page-container #intro .backgroung-img-intro img {
+        width: 100%; }
+        @media (min-width: 768px) {
+          #page-container #intro .backgroung-img-intro img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            height: 100%;
+            width: auto;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -o-transform: translateX(-50%) translateY(-50%);
+            -ms-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%); } }
     @media (min-width: 768px) {
       #page-container #intro .intro-wrap-content {
         width: 39.61589%;
         vertical-align: top;
-        display: inline-block; } }
+        display: inline-block;
+        padding-bottom: 43px; } }
     #page-container #intro .intro-wrap-content .title-intro-content {
       background-color: white;
       position: relative;
@@ -912,7 +954,12 @@ button {
     display: inline-block; }
     @media (min-width: 768px) {
       #page-container .top-articles {
-        padding-bottom: 50px; } }
+        padding-bottom: 50px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex; } }
     #page-container .top-articles .about-us {
       padding: 30px 0;
       background-color: #ebebeb; }
