--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -16,6 +16,13 @@
 			padding: 0 20px;
 			@media (min-width: 768px){
 				height: 150px;
+				max-width: 140px;
+			}
+			@media (min-width: 1080px){
+				max-width:205px;
+			}
+			@media (min-width: 1280px){
+				max-width:250px;
 			}
 			.archi-wiki-logo {
 				max-width: 112px;
@@ -23,7 +30,10 @@
 				padding-top: 20px;
 				@media (min-width: 768px){
 					max-width: 198.9px;
-					padding-top: 32px;
+					padding-top: 44px;
+					@media (min-width: 1080px){
+						padding-top: 32px;
+					}
 				}
 				&.logo-mobile {
 					@media (min-width: 768px){
@@ -39,7 +49,7 @@
 			.legend-logo {
   				font-size: 12px;
   				color: rgba(70, 87, 99, 0.85);
-  				@media (max-width: 767px){
+  				@media (max-width: 1079px){
 					display: none;
 				}
 			}
@@ -52,21 +62,30 @@
 			max-width: 714px;
 			height: 150px;
 			display: flex;
+			@media (min-width: 875px){
+				width: 63%;
+			}
 			.header-nav {
 				margin: auto;
 				.item {
 					display: inline-block;
-					padding: 0 15px;
+					padding: 0 5px;
+					@media (min-width: 1080px){
+						padding: 0 15px;
+					}
 					a {
 						color: $charcoal-grey;
 						text-transform: uppercase;
-						font-size: 18px;
+						font-size: 16px;
+						@media (min-width: 1080px){
+							font-size: 18px;
+						}
 					}
 				}
 			}
 		}
 		.search-nav {
-			@media (max-width: 1023px){
+			@media (max-width: 1279px){
 				display: none;
 			}
 			@include span(1,false);
