--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -3,18 +3,32 @@
 	margin:auto;
 	#intro {
 		background-color: white;
+		@media (min-width: 768px){
+			@include flexbox;
+		}
 		.backgroung-img-intro {
+			position: relative;
 			@media (min-width: 768px){
 				@include col(7);
 				@include inline-flex;
+    			overflow: hidden;
 			}
 			img {
 				width: 100%;
+				@media (min-width: 768px){
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					height: 100%;
+					width: auto;
+					@include transform(translateX(-50%) translateY(-50%));
+				}
 			}
 		}
 		.intro-wrap-content {
 			@media (min-width: 768px){
 				@include col(5);
+				padding-bottom: 43px;
 			}
 			.title-intro-content {
 				background-color: white;
@@ -53,6 +67,7 @@
 		display: inline-block;
 		@media (min-width: 768px){
 			padding-bottom: 50px;
+			@include flexbox; 
 		}
 		.about-us {
 			padding: 30px 0;
